--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,15 @@
   width: 100%;
   font-size: 100px;
   font-weight: 100;
-  text-align: center;
   color: rgba(175, 47, 47, 0.15);
   display: block;
 }
 
-/* .App {
+.App {
   text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
+/*
 .App-logo {
   height: 40vmin;
   pointer-events: none;
